<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.DetailsActivity"
    tools:showIn="@layout/activity_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/detailActivityPbImgProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:id="@+id/detailActivityImgProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/contend_description" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/detailActivityEdtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/txt_name_hint"
            android:textSize="@dimen/txt_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_quantity"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/detailActivityEdtQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/txt_quantity_hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_price"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/detailActivityEdtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_price_hint"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/txtSupplierEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_supplier_email"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/detailActivityEdtSupplierEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_supplier_email_hint"
            android:inputType="textEmailAddress"
            android:maxLength="100" />

        <TextView
            android:id="@+id/txtSupplierPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_supplier_phone"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/detailActivityEdtSupplierPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_supplier_phone_hint"
            android:inputType="phone"
            android:maxLength="100" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_description"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/detailActivityEdtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_description_hint"
            android:maxLength="100" />

        <Button
            android:id="@+id/detailActivityBtnQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_quantity" />

        <Button
            android:id="@+id/detailActivityBtnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_order" />

        <Button
            android:id="@+id/detailActivityBtnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete" />

        <Button
            android:id="@+id/detailActivityBtnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />
    </LinearLayout>
</ScrollView>