<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AddActivity"
    tools:showIn="@layout/activity_add">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/addActivityPbImgProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:id="@+id/addActivityImgProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/contend_description" />

        <Button
            android:id="@+id/addActivityBrowse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_browse" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/addActivityEdtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_name_hint"
            android:maxLength="25" />

        <TextView
            android:id="@+id/txtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_quantity"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/addActivityEdtQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_quantity_hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_price"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/addActivityEdtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_price_hint"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/txtSupplierEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_supplier_email"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/addActivityEdtSupplierEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_supplier_email_hint"
            android:inputType="textEmailAddress"
            android:maxLength="100" />

        <TextView
            android:id="@+id/txtSupplierPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_supplier_phone"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/addActivityEdtSupplierPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_supplier_phone_hint"
            android:inputType="phone"
            android:maxLength="100" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_description"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/addActivityEdtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_description_hint"
            android:maxLength="100" />

        <Button
            android:id="@+id/addActivityBtnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add" />

        <Button
            android:id="@+id/addActivityBtnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />
    </LinearLayout>
</ScrollView>