<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_quantity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/quantityDialog_edtQuantity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_quantity_hint"
        android:inputType="number"
        android:padding="10dp" />

    <Button
        android:id="@+id/quantityDialog_btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_quantity" />

    <Button
        android:id="@+id/quantityDialog_btnSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sub_quantity" />
</LinearLayout>