<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/lvProductsItemImgProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/contend_description" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_name"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/lvProductsItemTxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_name"
        android:textSize="@dimen/txt_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_quantity"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/lvProductsItemTxtQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_quantity" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_price"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/lvProductsItemTxtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_price" />

    <TextView
        android:id="@+id/txtSaleNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sale_number"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/lvProductsItemTxtSaleNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sale_number" />

    <Button
        android:id="@+id/lvProductsItemBtnSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sale" />
</LinearLayout>